move modal and sidebar out of mainview into own Outwatch.render

--- a/webApp/src/html/index.template.html
+++ b/webApp/src/html/index.template.html
@@ -54,6 +54,8 @@
     <!-- End Google Tag Manager (noscript) -->
     <% } %>
 
+    <div id="modal-placeholder"></div>
+    <div id="sidebar-placeholder"></div>
     <div id="container"></div>
   </body>
 </html>
