--- a/webApp/src/html/index.template.html
+++ b/webApp/src/html/index.template.html
@@ -65,5 +65,12 @@
     <script async src="https://cdn.nolt.io/widgets.js"></script>
     <script>window.noltQueue=window.noltQueue||[];function nolt(){noltQueue.push(arguments)}</script>
     <% } %>
+
+    <!-- announcekit sidebar widget -->
+    <script>
+      window.announcekit = (window.announcekit || { queue: [], on: function(n, x) { window.announcekit.queue.push([n, x]); }, push: function(x) { window.announcekit.queue.push(x); } });
+    </script>
+    <script async src="https://cdn.announcekit.app/widget.js"></script>
+
   </body>
 </html>
