--- a/webApp/src/html/index.template.html
+++ b/webApp/src/html/index.template.html
@@ -86,5 +86,16 @@
     </script>
     <% } %>
 
+    <script> 
+    var $buoop = {required:{e:-4,f:-3,o:-3,s:-1,c:-3,i:-999},insecure:true,unsupported:true,style:"bottom",api:2019.07 }; 
+    function $buo_f(){ 
+     var e = document.createElement("script"); 
+     e.src = "//browser-update.org/update.min.js"; 
+     document.body.appendChild(e);
+    };
+    try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
+    catch(e){window.attachEvent("onload", $buo_f)}
+    </script>
+
   </body>
 </html>
