--- a/webApp/src/html/index.html
+++ b/webApp/src/html/index.html
@@ -23,10 +23,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/<%= require('../../assets/favicon-16x16.png') %>">
     <link rel="shortcut icon" href="/<%= require('../../assets/favicon.ico') %>">
     <link rel="mask-icon" href="/<%= require('../../assets/safari-pinned-tab.svg') %>" color="#6636b7">
-    <% if (audience != "app") { %>
-        <link rel="manifest" href="/<%= require('../../assets/site.webmanifest') %>">
-    <% } else { %>
+    <% if (audience == "staging") { %>
         <link rel="manifest" href="/<%= require('../../assets/staging.webmanifest') %>">
+    <% } else { %>
+        <link rel="manifest" href="/<%= require('../../assets/site.webmanifest') %>">
     <% } %>
 
     <meta name="apple-mobile-web-app-title" content="Woost">
