Don't load google fonts in dev

--- a/webApp/src/html/index.html
+++ b/webApp/src/html/index.html
@@ -34,7 +34,9 @@
     <meta name="msapplication-TileColor" content="#6636b7">
     <meta name="theme-color" content="#6636b7"/>
 
+    <% if (audience != "dev") { %>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" crossorigin="anonymous">
+    <% } %>
 
     <title><%= title %></title>
 
