Fix Google Tag Manager <noscript> tracking ids

--- a/webApp/src/html/index.html
+++ b/webApp/src/html/index.html
@@ -70,7 +70,7 @@
   <body>
     <% if (audience != "dev") { %>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M2GCQLN"
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=<% if (audience == "app") { %>GTM-PWQZ2GB<% } else { %>GTM-M2GCQLN<% } %>"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <% } %>
