use stripe for payment

--- a/webApp/src/html/index.html
+++ b/webApp/src/html/index.html
@@ -91,6 +91,9 @@
     <script async src="https://cdn.announcekit.app/widget.js"></script>
     <% } %>
 
+    <!-- stripe js -->
+    <script src="https://js.stripe.com/v3/"></script>
+
 
     <!-- define crisp queue even in dev mode so we can detect if crisp was loaded or not (blocked by browser plugin) -->
     <script type="text/javascript">
