--- a/webApp/src/html/index.html
+++ b/webApp/src/html/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no"/>
     <meta name="robots" content="noindex">
 
+    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none'">
+
 
     <!-- Segment.com tracking code -->
     <% if (audience != "dev") { %>
